<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mobile3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:minHeight="20dp"
        android:text="@string/tv_numberOne"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etHomeNumberOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="number"
        android:minHeight="40dp"
        android:minWidth="45dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:minHeight="20dp"
        android:text="@string/tv_numberTwo"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etHomeNumberTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="number"
        android:minHeight="40dp"
        android:minWidth="45dp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:minHeight="40dp"
        android:text="@string/tv_result"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnHomeAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/btn_add" 
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnHomeSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/btn_subtract" 
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btnHomeDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/btn_divide"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnHomeMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"
        android:text="@string/btn_multiply"
        android:textColor="@android:color/white" />

</LinearLayout>